# RuCalculus

./: .gitignore  README.md  RuCalculus.cabal  stack.yaml
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
doc/: Document.md  Manual.md  Tutorial1.md
libru/: 串.入  列.入  列印.入  序对.入  甲.入
samples/: 「」示例.入  丫.入  入.入  合并.入  对.入  导数.入  小于.入  引.入  快排.入  斐氏列.入  斐氏列线性.入  测.入  阶乘.入
src/: AST.hs  Eval.hs  HostFuncs.hs  Interp.hs  Lib.hs  Main.hs  MonadicParse.hs  Parse.hs  TypeChecker.hs
